# hermes-agent-main

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  RELEASE_v0.11.0.md  RELEASE_v0.12.0.md  REPOSITORY_RECORD.md  batch_runner.py  cli-config.yaml.example  cli.py  hermes_constants.py  hermes_logging.py  hermes_state.py  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rl_cli.py  run_agent.py  toolsets.py  trajectory_compressor.py  upload-claude-sourcemap-to-github.sh  utils.py
.github/workflows/: deploy-site.yml  docker-publish.yml  docs-site-checks.yml  lint.yml  nix-lockfile-fix.yml  nix.yml  osv-scanner.yml  phoenix-v8-tests.yml  skills-index.yml  supply-chain-audit.yml  tests.yml
.releases/: RELEASE_v0.13.1.md
acp_adapter/: entry.py  permissions.py  session.py  tools.py
agent/: account_usage.py  anthropic_adapter.py  auxiliary_client.py  codex_responses_adapter.py  context_compressor.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  moonshot_schema.py  nous_rate_guard.py  onboarding.py  prompt_builder.py  redact.py  shell_hooks.py  skill_commands.py  skill_preprocessing.py  skill_utils.py  title_generator.py  tool_guardrails.py
agent/transports/: anthropic.py  chat_completions.py  codex.py  types.py
cron/: jobs.py  scheduler.py
docker/: entrypoint.sh
docs/plans/: 2026-05-02-telegram-dm-user-managed-multisession-topics.md
environments/: README.md  tool_context.py
gateway/: channel_directory.py  config.py  delivery.py  display_config.py  hooks.py  mirror.py  platform_registry.py  run.py  runtime_footer.py  session.py  session_context.py  status.py  stream_consumer.py  whatsapp_identity.py
hermes_cli/: auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  browser_connect.py  checkpoints.py  claw.py  codex_models.py  commands.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  goals.py  hooks.py  kanban.py  kanban_db.py  kanban_diagnostics.py  main.py  mcp_config.py  memory_setup.py  model_catalog.py  model_switch.py  models.py  oneshot.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  pty_bridge.py  (+13 more)
locales/: de.yaml  en.yaml  es.yaml  fr.yaml  ja.yaml  tr.yaml  uk.yaml  zh.yaml
nix/: checks.nix  devShell.nix  hermes-agent.nix  lib.nix  nixosModules.nix  packages.nix  tui.nix  web.nix
phoenix-v5.1.3-release/: ARCHITECTURE.md  DELIVERY_GUIDE.md  HERMES_融合与随版本升级.md  HOTFIX_NOTES.md  INSTALL_CUSTOMER_一页纸.md  INSTALL_GUIDE.md  INSTALL_安装说明_完整版.md  INSTALL_装前装后对比_Hermes与不死鸟.md  PHOENIX_5.1.3_CORE_DELIVERY.md  PHOENIX_5.1.3_VERIFY_REPORT.md  Phoenix_V5.1.3_初心回归_架构蓝图.md  README.md  README_INSTALL.md  RELEASE_交付流程与验收.md  START_HERE.md  USER_GUIDE.md  VERSION.md  __init__.py  auto_fusion.py  cli.py  config.json  doctor.py  feature_registry.json  install.ps1  install.sh  phoenix.py  post_upgrade_hook.sh  tools_acceptance_test.py  不死鸟_Phoenix_V5.1.3_使用说明书.md  不死鸟_Phoenix_V5.1.3_技术细则与路径原理.md
phoenix-v5.1.3-release/adapt/: __init__.py  adapter.py  compat_report.py  run.py
phoenix-v8-release/: ARCHITECTURE.md  CHANGELOG.md  DELIVERY_GUIDE.md  HERMES_TUI_与不死鸟斜杠指令.md  HERMES_融合与随版本升级.md  HOTFIX_NOTES.md  INSTALL_CUSTOMER_一页纸.md  INSTALL_GUIDE.md  INSTALL_安装说明_完整版.md  INSTALL_平台选择_macOS_Windows_WSL_Linux.md  INSTALL_装前装后对比_Hermes与不死鸟.md  PHOENIX_V8_CORE_DELIVERY.md  PHOENIX_V8_VERIFY_REPORT.md  Phoenix_V8_初心回归_架构蓝图.md  README.md  README_INSTALL.md  RELEASE_交付流程与验收.md  START_HERE.md  USER_GUIDE.md  VERSION.md  __init__.py  auto_fusion.py  auto_save.py  cli.py  config.json  doctor.py  feature_registry.json  install.ps1  install.sh  phoenix.py  post_upgrade_hook.sh  sim_verify_v8.py  tools_acceptance_test.py  不死鸟_Phoenix_V8_使用说明书.md  不死鸟_Phoenix_V8_技术细则与路径原理.md
phoenix-v8-release/core/: config.py  (+11 more)
providers/: base.py
scripts/: build_model_catalog.py  contributor_audit.py  discord-voice-doctor.py  install.ps1  install.sh  profile-tui.py  release.py  setup_open_webui.sh
tests/: conftest.py  test_atomic_replace_symlinks.py  test_batch_runner_checkpoint.py  test_cli_file_drop.py  test_cli_manual_compress.py  test_get_tool_definitions_cache_isolation.py  test_hermes_logging.py  test_hermes_state.py  test_lazy_session_regressions.py  test_minimax_oauth.py  test_model_tools.py  test_model_tools_async_bridge.py  test_plugin_skills.py  test_toolsets.py  test_trajectory_compressor.py  test_trajectory_compressor_async.py  test_transform_tool_result_hook.py  test_yuanbao_integration.py  test_yuanbao_pipeline.py  test_yuanbao_proto.py
tools/: approval.py  browser_camofox.py  browser_cdp_tool.py  browser_dialog_tool.py  browser_supervisor.py  browser_tool.py  checkpoint_manager.py  code_execution_tool.py  cronjob_tools.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  fuzzy_match.py  image_generation_tool.py  kanban_tools.py  mcp_tool.py  memory_tool.py  mixture_of_agents_tool.py  patch_parser.py  process_registry.py  registry.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skill_usage.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  slash_confirm.py  terminal_tool.py  tirith_security.py  tool_backend_helpers.py  tool_output_limits.py  transcription_tools.py  tts_tool.py  url_safety.py  vision_tools.py  web_tools.py  (+1 more)
tui_gateway/: entry.py  server.py  ws.py
ui-tui/: README.md  babel.compiler.config.cjs  eslint.config.mjs  package-lock.json  package.json
web/: index.html  package-lock.json  package.json  vite.config.ts
website/: .gitignore  package.json  sidebars.ts
(+1070 files in other folders)
